objects/SFDC_Paid_Time_Off__c.object
<CustomObject>
    <description>Track your Paid Time Off requests and approvals here.</description>
    <label>Paid Time Off</label>
    <nameField>
        <displayFormat>PTOFF-{000000}</displayFormat>
        <label>Paid Time Off Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Paid Time Offs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person that will be approving this application</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001DduOEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <description>Last Date that you will be on Leave.</description>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Off__c</fullName>
        <formula>floor( To_Date__c  - From_Date__c)</formula>
        <label>Days Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <description>Date that you will first be on leave.</description>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leave_Type__c</fullName>
        <description>Enter the leave type reason.</description>
        <label>Leave Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Leave</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Funeral</fullName>
                </value>
                <value>
                    <fullName>Jury Duty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001EU0XEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Approvers will review the leave application and change the status to approved (if approved, or rejected if not approved)</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Approval</fullName>
                    <default>true</default>
                    <label>Awaiting Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Employee that is requesting the Paid Time Off</description>
        <label>EmployeeContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Paid Time Offs</relationshipLabel>
        <relationshipName>R00N30000001DduNEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Working_Days_Off__c</fullName>
        <description>Number of working days that you will take off.  This will be the difference between the from date and to date, less weekends and public holidays.</description>
        <label>Number of Working Days Off</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
</CustomObject>